# sushi-shuffle

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  main.c
.github/workflows/: File-Sorter-Core Build.yml  greetings.yml
config/: config.conf
include/: config.h  logger.h  sorter.h
include/tool/: actions.h
src/: config.c  logger.c  main.c  manager.c  manager.h  sorter.c
src/include/: manager.h
src/tool/: actions.c
tools/: configParser.c  configParser.h  config_parser.c  logger.c  logger.h
tools/include/: config_parser.h  mem.h
tools/include/config/: config_parser.h
tools/include/log/: logger.h
